[tool.poetry]
name = "exploratory-data-analysis-"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "exploratory_data_analysis_"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
